testsuite/tests/parser/should_fail/pfail019.alan
hello() : proc
  foo : int;
{
  foo = *3
  foo = 3;
}
