testsuite/tests/parser/should_fail/pfail019.stderr
pfail019.alan:4:9: Error: Parse error on input `*'
	Not a valid expression

